2011-09-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/performance.php
	godmode/setup/setup_visuals.php: Added contextual help in this views.
	* include/functions_reporting.php: Now serialized reports get numeric data.

2011-09-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Url and Integria password are checked and 
	it is showed at advise in case of error. 

	Fixes: #3396567

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* general/pandora_help.php: changet the text align of footer.
	
	Fixes: #3371432

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/messages/message.php: now show more error messages in case the
	user error or group error.
	
	Fixes: #3371451

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/extensions.php: update the style of page.
	
	Fixes: #3371523

2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_network_templates.php: Added description titles
	to action buttons on this view.

	Fixes: #3373300

2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_forms.css
	include/styles/pandora_minimal.css
	include/styles/pandora_black.css
	include/styles/pandora.css: Changed style for calendar.

	* images/skin/skin_default/include/styles/menu.css: Added icon for 
	networkmap with skin configuration.

2011-09-06 Javier Lanz <javier.lanz@artica.es>

	* include/help/en/help_timesource.php: Changed a wee translation bug
	and fixed style format
	* godmode/setup/setup.php: Fixed a field name, written properly.

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/styles/pandora.css,
	images/skin/skin_default/include/styles/pandora.css: added items to set the
	style of calendar tooltip.
	
	* include/calendar.js, include/javascript/calendar.js: erased the styles
	for the calendar.
	
	Fixes: #3371449

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	