@@ -1,3 +1,9 @@
+2011-09-08  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: fixed in function "otherParameter2Filter" the
+	simbol of timestamp comparation and separate the AND operator. And added
+	2 more filters, the "limit" and the "offset".
+
 2011-09-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* godmode/setup/performance.php
